# ha-ccc-waste

./: .gitignore  README.md  hacs.json  info.md  lefthook.yml  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  validate.yml
custom_components/ccc_waste/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  manifest.json  models.py  quality_scale.yaml  schedule.py  sensor.py  strings.json
custom_components/ccc_waste/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_init.py  test_schedule.py
tests/fixtures/: getProperty.json  getProperty_all_excluded.json  getProperty_malformed.json  getProperty_no_kerbside.json  overrides.json  suggest.json
